--- a/WebContent/Canvas.html
+++ b/WebContent/Canvas.html
@@ -36,19 +36,12 @@ div {
 			</hgroup>
 			<p>Some text</p>
 			<section>
-				<h2>Section heading</h2>
+				<h2>Image </h2>
 				<p>
-					<object width="640" height="385">
-						<param name="movie"
-							value="http://www.youtube.com/v/24FNE60FRzw&hl=en_GB&fs=1&">
-						</param>
-						<param name="allowFullScreen" value="true"></param>
-						<param name="allowscriptaccess" value="always"></param>
-						<embed src="http://www.youtube.com/v/24FNE60FRzw&hl=en_GB&fs=1&"
-							type="application/x-shockwave-flash" allowscriptaccess="always"
-							allowfullscreen="true" width="640" height="385">
-						</embed>
-					</object>
+					<img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==" alt="Red dot">
+				</p>
+				<p>
+					
 				</p>
 				<ol type="I">
 					<li value="7">seventh item</li>
@@ -71,19 +64,7 @@ div {
 		</blockquote>
 	</div>
 	<footer id="footer">
-		<div id="fb-root"></div>
-		<script>
-			(function(d, s, id) {
-				var js, fjs = d.getElementsByTagName(s)[0];
-				if (d.getElementById(id))
-					return;
-				js = d.createElement(s);
-				js.id = id;
-				js.src = "//connect.facebook.net/th_TH/all.js#xfbml=1";
-				fjs.parentNode.insertBefore(js, fjs);
-			}(document, 'script', 'facebook-jssdk'));
-		</script>
-		<div class="fb-like">Like</div>
+
 	</footer>
 </body>
 </html>
