Add Axis 2 integration wih spring example

--- a/src/main/webapp/MoibleAppByJquery.html
+++ b/src/main/webapp/MoibleAppByJquery.html
@@ -7,6 +7,17 @@
 	href="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.css" />
 <script src="http://code.jquery.com/jquery-1.7.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.js"></script>
+<script>
+	$(document).ready(function() {
+		console.log("document loaded");
+	});
+
+	$(window).load(function() {
+		console.log("window loaded");
+	});
+
+	
+</script>
 </head>
 <body>
 	<div data-role="header">
